--- a/manifest.json
+++ b/manifest.json
@@ -1,25 +1,36 @@
 {
-    "name"          : "Pull to refresh",
-    "version"       : "1.0.7",
-    "description"   : "Pull down gesture implementation ( touch / mousewheel / trackpad ) to reload the current webpage.",
+    "name": "Pull to refresh",
+    "version": "1.0.7",
+    "description": "Pull down gesture implementation ( touch / mousewheel / trackpad ) to reload the current webpage.",
     "content_scripts": [
         {
-            "matches"           : [
+            "matches": [
                 "http://*/*",
                 "https://*/*",
                 "*://*/*"
             ],
-            "js"                : [ "content_script.js" ],
-            "css"               : [ "css/styles.css" ],
-            "match_about_blank" : true,
-            "run_at"            : "document_start"
+            "js": [
+                "content_script.js"
+            ],
+            "css": [
+                "css/styles.css"
+            ],
+            "match_about_blank": true,
+            "run_at": "document_start"
         }
     ],
     "permissions": [
-	    "https://*/*",
-	    "http://*/*",
-	    "tabs"
-  	],
-    "icons": { "128": "icon.png" },
+        "https://*/*",
+        "http://*/*",
+        "tabs",
+        "storage"
+    ],
+    "options_ui": {
+        "page": "options.html",
+        "open_in_tab": false
+    },
+    "icons": {
+        "128": "icon.png"
+    },
     "manifest_version": 2
 }
