--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": ".src/test.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "bestzip dist/pull-to-refresh-chrome-extension.zip src/*"
+    "build": "cd src/ && bestzip ../dist/pull-to-refresh-chrome-extension.zip *"
   },
   "repository": {
     "type": "git",
